--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_core: ^0.4.0+9 # Firebase Core
+  firebase_auth: ^0.14.0+5 # Firebase Auth
+  google_sign_in: ^4.0.7 # Google SignIn
 
 dev_dependencies:
   flutter_test:
