--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^0.4.0+9 # Firebase Core
   firebase_auth: ^0.14.0+5 # Firebase Auth
   google_sign_in: ^4.0.7 # Google SignIn
+  badges: ^1.1.0
 
 dev_dependencies:
   flutter_test:
