--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   firebase_auth: ^0.14.0+5 # Firebase Auth
   google_sign_in: ^4.0.7 # Google SignIn
   badges: ^1.1.0
+  flutter_calendar_carousel: ^1.4.9
+  flutter_datetime_picker: ^1.2.8
 
 dev_dependencies:
   flutter_test:
