--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   badges: ^1.1.0
   flutter_calendar_carousel: ^1.4.9
   flutter_datetime_picker: ^1.2.8
+  flutter_speed_dial: 1.2.4
 
 dev_dependencies:
   flutter_test:
