--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   badges: ^1.1.0
   flutter_calendar_carousel: ^1.4.9
   flutter_datetime_picker: ^1.2.8
+  cloud_firestore: ^0.12.9+4
+  firebase_database: ^3.1.0
 
 dev_dependencies:
   flutter_test:
