--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^0.12.9+4
   firebase_database: ^3.1.0
   flutter_speed_dial: ^1.2.4
+  jiffy: ^2.1.2
 
 dev_dependencies:
   flutter_test:
