--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     // Firebase Analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    //
+    implementation 'com.android.support:support-v4:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
