--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,18 @@ buildscript {
         // Google Services
         classpath 'com.google.gms:google-services:3.2.1'
     }
+
+    //
+    subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency { details ->
+                if (details.requested.group == 'androidx.appcompat'
+                        && !details.requested.name.contains('androidx') ) {
+                    details.useVersion "1.0.2"
+                }
+            }
+        }
+    }
 }
 
 allprojects {
