--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   jiffy: ^2.1.2
   qr_flutter: ^3.1.0
   path_provider: ^1.4.2
+  barcode_scan: ^1.0.0
 
 dev_dependencies:
   flutter_test:
